# spelunking

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/spelunking-cli/: Cargo.toml
crates/spelunking-cli/src/: main.rs
crates/spelunking-core/: Cargo.toml
crates/spelunking-core/src/: discovery.rs  graph.rs  lib.rs  parsing.rs
crates/spelunking-core/src/analysis/: mod.rs
crates/spelunking-core/src/analysis/python/: artifacts.rs  behavior.rs  django.rs  guidance.rs  imports.rs  mod.rs  subject.rs
