[workspace]
members = [
    "crates/spelunking-cli",
    "crates/spelunking-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
petgraph = { version = "0.8", features = ["serde-1"] }
rayon = "1.11"
rustpython-parser = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spelunking-core = { path = "crates/spelunking-core" }
